# galago

./: .gitignore  CLAUDE.md  README.md  galago.py  galago.spec  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-executables.yml
packaging/: pyinstaller_entry.py
src/galago/: __main__.py  constants.py  paths.py
src/galago/adapters/: json_score_store.py
src/galago/adapters/pygame_adapter/: audio.py  clock.py  input.py  intro.py  palette.py  renderer.py
src/galago/app/: loop.py
src/galago/domain/: capture.py  collisions.py  entities.py  explosions.py  formation.py  leaderboard.py  math_utils.py  session.py  waves.py
src/galago/ports/: audio.py  clock.py  input.py  renderer.py  scores.py
tests/: test_bezier.py  test_bonus_round.py  test_capture.py  test_collisions.py  test_entities.py  test_formation.py  test_initials_entry.py  test_leaderboard.py  test_session_round.py  test_waves.py
