[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "galago"
version = "0.1.0"
description = "A Galaga-style arcade shoot-'em-up built with pygame"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5,<3",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
galago = "galago.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
